--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.510.0",
+    "npx": "^3.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -20,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue/tsconfig": "^0.7.0",
+    "naive-ui": "^2.41.0",
     "npm-run-all2": "^7.0.2",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
