--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "lucide-vue-next": "^0.510.0",
     "npx": "^3.0.0",
     "vue": "^3.5.13",
